cleaned css and put my name at the top

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>Top 10 <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> Fonts</h1>
+<h2>assembled by Jaap Joris Vens</h2>
 
 <p style="text-align: justify">
 
