--- a/index.html
+++ b/index.html
@@ -21,22 +21,15 @@ and provides some background and usage instructions.
 All the fonts are free and open source and are included by default in
 most <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
 distributions.  All fonts are also available
-on <a href="http://www.ctan.org/tex-archive/fonts/">CTAN</a>,
-
-as well as in the
+on <a href="http://www.ctan.org/tex-archive/fonts/">CTAN</a>, as well as in the
 <a href="http://www.tug.dk/FontCatalogue/"><span class="latex">T<sub>e</sub>X</span>
-Font Catalogue</a> which lists them all including usage instuctions.
+Font Catalogue</a>.
 </p>
-
 
 <p style="font-size: smaller">
 &nbsp;&nbsp;&nbsp;<sup>1</sup> except for this one, which is the only
 paragraph rendered by your browser.
 </p>
-
-<!-- Note: If you want to do math, check out
-http://www.ctan.org/tex-archive/info/Free_Math_Font_Survey/survey.html
--->
 
 &nbsp;
 
