--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ on <a href="http://www.ctan.org/tex-archive/fonts/">CTAN</a>, as well as in the
 Font Catalogue</a>.
 </p>
 
-<p style="font-size: smaller">
+<span style="font-size: smaller">
 &nbsp;&nbsp;&nbsp;<sup>1</sup> except for this one, which is the only
 paragraph rendered by your browser.
-</p>
+</span>
 
 &nbsp;
 
