added github link

--- a/index.html
+++ b/index.html
@@ -18,26 +18,23 @@ the <a href="http://savannah.nongnu.org/projects/dvipng/">dvipng</a>
 utility.  Each paragraph<sup>1</sup> showcases a different font family
 and provides some background and usage instructions.
 
+The source of this page is <a href="https://github.com/r2src/top10fonts/">available on GitHub</a>.
+
 All the fonts are free and open source and are included by default in
 most <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
 distributions.  All fonts are also available
 on <a href="http://www.ctan.org/tex-archive/fonts/">CTAN</a>, as well as in the
 <a href="http://www.tug.dk/FontCatalogue/"><span class="latex">T<sub>e</sub>X</span>
-Font Catalogue</a>.
-</p>
-
+Font Catalogue</a>.<br>
 <span style="font-size: smaller">
 &nbsp;&nbsp;&nbsp;<sup>1</sup> except for this one, which is the only
 paragraph rendered by your browser.
 </span>
-
-&nbsp;
+</p>
 
 <p>
 <img src="lmodern.png" alt="1 Computer Modern" border="0" />
 </p>
-
-&nbsp;
 
 <p>
 <img src="kpfonts.png" alt="2 Kepler Fonts" border="0" />
@@ -49,19 +46,13 @@ paragraph rendered by your browser.
 <img src="kpsans.png" alt="Kepler Sans" border="0" />
 </p>
 
-&nbsp;
-
 <p>
 <img src="didot.png" alt="6 GFS Didot" border="0" />
 </p>
 
-&nbsp;
-
 <p>
 <img src="utopia.png" alt="4 Utopia" border="0" />
 </p>
-
-&nbsp;
 
 <p>
 <img src="venturis.png" alt="5 Venturis ADF" border="0" />
@@ -76,13 +67,9 @@ paragraph rendered by your browser.
 <img src="venturisrm3.png" alt="" border="0" />
 </p>
 
-&nbsp;
-
 <p>
 <img src="libertine.png" alt="6 Libertine" border="0" />
 </p>
-
-&nbsp;
 
 <p>
 <img src="gyre.png" alt="7 TeX Gyre Collection" border="0" />
@@ -100,28 +87,17 @@ paragraph rendered by your browser.
 <img src="gyretermes.png" alt="Termes" border="0" />
 </p>
 
-&nbsp;
-
 <p>
 <img src="antiqua.png" alt="7 URW Antiqua" border="0" />
 </p>
-
-&nbsp;
 
 <p>
 <img src="bera.png" alt="10 Bitstream Vera" border="0" />
 </p>
 
-&nbsp;
-
 <p>
 <img src="boisik.png" alt="8 Boisik" border="0" />
 </p>
-
-&nbsp;
-
-
-<!--#include virtual="/cgi-bin/comments.cgi?site=latex" -->
 
 </body>
 </html>
